auth token system

--- a/client/index.html
+++ b/client/index.html
@@ -11,6 +11,8 @@
 </head>
 <body>
     
+    <script src="./js/DatabaseFunctions/users.js"></script>
+    <script src="./js/trash.js"></script>
     <script src="./js/connectAndRegister/tokenConnection.js"></script>
 </body>
 </html>
