--- a/client/index.html
+++ b/client/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     
-    <script src="./js/DatabaseFunctions/users.js"></script>
+    <script src="./js/DatabaseFunctions/users.functions.js"></script>
     <script src="./js/trash.js"></script>
     <script src="./js/connectAndRegister/tokenConnection.js"></script>
 </body>
