start of the buy and sell cypto system

--- a/client/pages/home.html
+++ b/client/pages/home.html
@@ -8,11 +8,22 @@
     <link rel="stylesheet" href="../css/colors.css">
     <link rel="stylesheet" href="../css/fonts.css">
     <link rel="stylesheet" href="../css/index.css">
+    <link rel="stylesheet" href="../css/home.css">
     <title>Home</title>
 </head>
 <body>
-    <p>Home</p>
+    <p class="user-wallet-amount"></p>
 
+    <div class="currencies-list">
+
+    </div>
+
+    <script src="../js/authToken.js"></script>
+    <script src="../js/DatabaseFunctions/users.functions.js"></script>
     <script src="../js/prices.js"></script>
+
+
+    <script src="../js/userData.js"></script>
+    <script src="../js/home/currenciesList.js"></script>
 </body>
 </html>
