new React components

--- a/client/pages/login.html
+++ b/client/pages/login.html
@@ -7,11 +7,28 @@
     <link rel="stylesheet" href="../css/generics.css">
     <link rel="stylesheet" href="../css/colors.css">
     <link rel="stylesheet" href="../css/fonts.css">
-    <link rel="stylesheet" href="../css/index.css">
+    <link rel="stylesheet" href="../css/login.css">
     <title>Connexion</title>
 </head>
 <body>
+    <div id="root"></div>
 
+    <!-- GENERIC SCRIPTS AND CONSTANT VAR -->
+    <script src="../js/authToken.js"></script>
+    <script src="../js/DatabaseFunctions/users.functions.js"></script>
+
+    <!-- REACT -->
+    <script src="https://unpkg.com/react@17/umd/react.development.js" crossorigin></script>
+    <script src="https://unpkg.com/react-dom@17/umd/react-dom.development.js" crossorigin></script>
+    <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
+
+    <!-- REACT COMPONENTS -->
+    <script src="../js/components/login/background.jsx" type="text/babel"></script>
+
+    <!-- REACT VIEWS -->
+    <script src="../js/views/login.jsx" type="text/babel"></script>
+
+    <!--  -->
     <script src="../js/connectAndRegister/login.js"></script>
     <script src="../js/connectAndRegister/register.js"></script>
 </body>
