--- a/client/public/index.html
+++ b/client/public/index.html
@@ -8,5 +8,15 @@
   </head>
   <body>
     <div id="root"></div>
+    
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-H09DYMY461"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-H09DYMY461');
+    </script>
   </body>
 </html>
